k8s/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: incidentguard
  labels:
    app.kubernetes.io/name: backend
    app.kubernetes.io/part-of: incidentguard
spec:
  selector:
    app.kubernetes.io/name: backend-pod
  ports:
    - name: backend
      port: 8000
      targetPort: http
